# q_speace

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
cellular_speace/: .env.example  .gitattributes  (+14 more)
cellular_speace/.claude/worktrees/agent-a337b3a710e243d63/: .gitignore  pyproject.toml  run_t33b_audit.py
cellular_speace/.claude/worktrees/agent-a337b3a710e243d63/data/evolution_t20_baseline/: evolution_runs.jsonl  lineages.jsonl
cellular_speace/.claude/worktrees/agent-a337b3a710e243d63/data/identity_kernel/: life_story.jsonl
cellular_speace/.claude/worktrees/agent-a337b3a710e243d63/docs/: AUTONOMOUS_LIMITATION_ARCHITECTURE_REWRITING_LOOP_SPEC.md  DEEP_REGION_FUNCTIONAL_AUDIT_SPEC.md  DEEP_REGION_SPECIALIZATION_SPEC.md  ENERGY_CONTROL_AGENT_SPEC.md  EPISODIC_MEMORY_TEMPORAL_EXPERIENCE_SPEC.md  LONG_HORIZON_ADAPTATION_AUDIT_SPEC.md  MORPHOLOGICAL_MEMORY_SPEC.md  NeuroEvolve A Bio-Inspired Framework.md  PATHWAY_PLASTICITY_SENSITIVITY_TUNING_SPEC.md  PATHWAY_UTILITY_LEARNING_SPEC.md  RECOVERY_POLICY_FREEZING_SPEC.md  SKILL_TRANSFER_REAL_RUN_GENERALIZATION_AUDIT_SPEC.md  cellular_speace.md  pensiero_linguaggio_speace.md
cellular_speace/.claude/worktrees/agent-a337b3a710e243d63/scripts/: run_t20_canonical_audit.py
cellular_speace/.claude/worktrees/agent-a337b3a710e243d63/speace_core/: cli.py  event_bus.py
cellular_speace/.claude/worktrees/agent-a337b3a710e243d63/speace_core/dna/: parser.py
cellular_speace/.claude/worktrees/agent-a337b3a710e243d63/tests/action_governance/: test_action_governance_audit.py  test_reversibility_analyzer.py
cellular_speace/.claude/worktrees/agent-a337b3a710e243d63/tests/analysis/: test_associative_memory_audit.py  test_deep_region_audit.py  test_long_horizon_adaptation_audit.py  test_patch_outcome_audit.py  test_regression_guard.py  test_semantic_memory_audit.py
cellular_speace/.claude/worktrees/agent-a337b3a710e243d63/tests/calibration/: test_homeostatic_calibrator.py
cellular_speace/.claude/worktrees/agent-a337b3a710e243d63/tests/cli/: test_cli.py
cellular_speace/.claude/worktrees/agent-a337b3a710e243d63/tests/cyber_physical/: test_cyber_physical_models.py  test_cyber_physical_policy_engine.py  test_cyber_physical_real_run_audit_runner.py  test_orchestrator_integration.py  test_sensor_stream.py
cellular_speace/.claude/worktrees/agent-a337b3a710e243d63/tests/evolutionary_kernel/: test_edd_cvt_kernel.py  test_multi_cycle_evolution_audit.py
cellular_speace/.claude/worktrees/agent-a337b3a710e243d63/tests/execution/: test_event_driven_burst_engine.py
cellular_speace/.claude/worktrees/agent-a337b3a710e243d63/tests/hopfield_krotov/: test_hopfield_krotov_controller.py
cellular_speace/.claude/worktrees/agent-a337b3a710e243d63/tests/identity_kernel/: test_stage_tracker.py
cellular_speace/.claude/worktrees/agent-a337b3a710e243d63/tests/immune/: test_immune_response_engine.py
cellular_speace/.claude/worktrees/agent-a337b3a710e243d63/tests/lateral_inhibition/: test_lateral_inhibition_engine.py
cellular_speace/.claude/worktrees/agent-a337b3a710e243d63/tests/memory/: test_cell_assembly_memory.py  test_differentiation_integration.py
cellular_speace/.claude/worktrees/agent-a337b3a710e243d63/tests/metabolism/: test_metabolism.py
cellular_speace/.claude/worktrees/agent-a337b3a710e243d63/tests/neurofunctional/: test_neurofunctional_benchmark.py
(+9416 files in other folders)
